FabParser.cpp

// Generated from FabParser.g4 by ANTLR 4.7.1


#include "FabParserVisitor.h"

#include "FabParser.h"


using namespace antlrcpp;
using namespace antlr4;

FabParser::FabParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

FabParser::~FabParser() {
  delete _interpreter;
}

std::string FabParser::getGrammarFileName() const {
  return "FabParser.g4";
}

const std::vector<std::string>& FabParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& FabParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

FabParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FabParser::FileContext::EOF() {
  return getToken(FabParser::EOF, 0);
}

std::vector<FabParser::ValueContext *> FabParser::FileContext::value() {
  return getRuleContexts<FabParser::ValueContext>();
}

FabParser::ValueContext* FabParser::FileContext::value(size_t i) {
  return getRuleContext<FabParser::ValueContext>(i);
}


size_t FabParser::FileContext::getRuleIndex() const {
  return FabParser::RuleFile;
}

antlrcpp::Any FabParser::FileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FabParserVisitor*>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

FabParser::FileContext* FabParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, FabParser::RuleFile);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << FabParser::Action)
      | (1ULL << FabParser::FileListStart)
      | (1ULL << FabParser::Foreach)
      | (1ULL << FabParser::Function)
      | (1ULL << FabParser::If)
      | (1ULL << FabParser::Record)
      | (1ULL << FabParser::Type)
      | (1ULL << FabParser::BoolLiteral)
      | (1ULL << FabParser::IntLiteral)
      | (1ULL << FabParser::StringLiteral)
      | (1ULL << FabParser::Minus)
      | (1ULL << FabParser::Not)
      | (1ULL << FabParser::Plus)
      | (1ULL << FabParser::BraceOpen)
      | (1ULL << FabParser::BracketOpen)
      | (1ULL << FabParser::ParenOpen)
      | (1ULL << FabParser::Identifier))) != 0)) {
      setState(76);
      dynamic_cast<FileContext *>(_localctx)->valueContext = value();
      dynamic_cast<FileContext *>(_localctx)->values.push_back(dynamic_cast<FileContext *>(_localctx)->valueContext);
      setState(81);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(82);
    match(FabParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ValueContext ------------------------------------------------------------------

FabParser::ValueContext::ValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FabParser::ExpressionContext* FabParser::ValueContext::expression() {
  return getRuleContext<FabParser::ExpressionContext>(0);
}

tree::TerminalNode* FabParser::ValueContext::End() {
  return getToken(FabParser::End, 0);
}

tree::TerminalNode* FabParser::ValueContext::Assign() {
  return getToken(FabParser::Assign, 0);
}

tree::TerminalNode* FabParser::ValueContext::Identifier() {
  return getToken(FabParser::Identifier, 0);
}

tree::TerminalNode* FabParser::ValueContext::TypeSep() {
  return getToken(FabParser::TypeSep, 0);
}

FabParser::TypeContext* FabParser::ValueContext::type() {
  return getRuleContext<FabParser::TypeContext>(0);
}


size_t FabParser::ValueContext::getRuleIndex() const {
  return FabParser::RuleValue;
}

antlrcpp::Any FabParser::ValueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FabParserVisitor*>(visitor))
    return parserVisitor->visitValue(this);
  else
    return visitor->visitChildren(this);
}

FabParser::ValueContext* FabParser::value() {
  ValueContext *_localctx = _tracker.createInstance<ValueContext>(_ctx, getState());
  enterRule(_localctx, 2, FabParser::RuleValue);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(84);
      dynamic_cast<ValueContext *>(_localctx)->name = match(FabParser::Identifier);
      setState(87);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == FabParser::TypeSep) {
        setState(85);
        match(FabParser::TypeSep);
        setState(86);
        type();
      }
      setState(89);
      match(FabParser::Assign);
      break;
    }

    }
    setState(92);
    expression(0);
    setState(93);
    match(FabParser::End);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

FabParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FabParser::CallContext* FabParser::ExpressionContext::call() {
  return getRuleContext<FabParser::CallContext>(0);
}

FabParser::ConditionalContext* FabParser::ExpressionContext::conditional() {
  return getRuleContext<FabParser::ConditionalContext>(0);
}

FabParser::FieldQueryContext* FabParser::ExpressionContext::fieldQuery() {
  return getRuleContext<FabParser::FieldQueryContext>(0);
}

FabParser::FieldReferenceContext* FabParser::ExpressionContext::fieldReference() {
  return getRuleContext<FabParser::FieldReferenceContext>(0);
}

FabParser::ForeachContext* FabParser::ExpressionContext::foreach() {
  return getRuleContext<FabParser::ForeachContext>(0);
}

FabParser::FunctionContext* FabParser::ExpressionContext::function() {
  return getRuleContext<FabParser::FunctionContext>(0);
}

FabParser::UnaryOperationContext* FabParser::ExpressionContext::unaryOperation() {
  return getRuleContext<FabParser::UnaryOperationContext>(0);
}

FabParser::TermContext* FabParser::ExpressionContext::term() {
  return getRuleContext<FabParser::TermContext>(0);
}

std::vector<FabParser::ExpressionContext *> FabParser::ExpressionContext::expression() {
  return getRuleContexts<FabParser::ExpressionContext>();
}

FabParser::ExpressionContext* FabParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<FabParser::ExpressionContext>(i);
}

FabParser::MultOpContext* FabParser::ExpressionContext::multOp() {
  return getRuleContext<FabParser::MultOpContext>(0);
}

FabParser::AddOpContext* FabParser::ExpressionContext::addOp() {
  return getRuleContext<FabParser::AddOpContext>(0);
}

FabParser::CompareOpContext* FabParser::ExpressionContext::compareOp() {
  return getRuleContext<FabParser::CompareOpContext>(0);
}

FabParser::LogicOpContext* FabParser::ExpressionContext::logicOp() {
  return getRuleContext<FabParser::LogicOpContext>(0);
}

tree::TerminalNode* FabParser::ExpressionContext::Cons() {
  return getToken(FabParser::Cons, 0);
}


size_t FabParser::ExpressionContext::getRuleIndex() const {
  return FabParser::RuleExpression;
}

antlrcpp::Any FabParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FabParserVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}


FabParser::ExpressionContext* FabParser::expression() {
   return expression(0);
}

FabParser::ExpressionContext* FabParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  FabParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  FabParser::ExpressionContext *previousContext = _localctx;
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, FabParser::RuleExpression, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(104);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      setState(96);
      call();
      break;
    }

    case 2: {
      setState(97);
      conditional();
      break;
    }

    case 3: {
      setState(98);
      fieldQuery();
      break;
    }

    case 4: {
      setState(99);
      fieldReference(0);
      break;
    }

    case 5: {
      setState(100);
      foreach();
      break;
    }

    case 6: {
      setState(101);
      function();
      break;
    }

    case 7: {
      setState(102);
      unaryOperation();
      break;
    }

    case 8: {
      setState(103);
      term();
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(127);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(125);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(106);

          if (!(precpred(_ctx, 13))) throw FailedPredicateException(this, "precpred(_ctx, 13)");
          setState(107);
          multOp();
          setState(108);
          expression(14);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(110);

          if (!(precpred(_ctx, 12))) throw FailedPredicateException(this, "precpred(_ctx, 12)");
          setState(111);
          addOp();
          setState(112);
          expression(13);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(114);

          if (!(precpred(_ctx, 11))) throw FailedPredicateException(this, "precpred(_ctx, 11)");
          setState(115);
          compareOp();
          setState(116);
          expression(12);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(118);

          if (!(precpred(_ctx, 10))) throw FailedPredicateException(this, "precpred(_ctx, 10)");
          setState(119);
          logicOp();
          setState(120);
          expression(11);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(122);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");
          setState(123);
          dynamic_cast<ExpressionContext *>(_localctx)->cons = match(FabParser::Cons);
          setState(124);
          expression(9);
          break;
        }

        } 
      }
      setState(129);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- AddOpContext ------------------------------------------------------------------

FabParser::AddOpContext::AddOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FabParser::AddOpContext::Minus() {
  return getToken(FabParser::Minus, 0);
}

tree::TerminalNode* FabParser::AddOpContext::Plus() {
  return getToken(FabParser::Plus, 0);
}


size_t FabParser::AddOpContext::getRuleIndex() const {
  return FabParser::RuleAddOp;
}

antlrcpp::Any FabParser::AddOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FabParserVisitor*>(visitor))
    return parserVisitor->visitAddOp(this);
  else
    return visitor->visitChildren(this);
}

FabParser::AddOpContext* FabParser::addOp() {
  AddOpContext *_localctx = _tracker.createInstance<AddOpContext>(_ctx, getState());
  enterRule(_localctx, 6, FabParser::RuleAddOp);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    _la = _input->LA(1);
    if (!(_la == FabParser::Minus

    || _la == FabParser::Plus)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompareOpContext ------------------------------------------------------------------

FabParser::CompareOpContext::CompareOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FabParser::CompareOpContext::Equals() {
  return getToken(FabParser::Equals, 0);
}

tree::TerminalNode* FabParser::CompareOpContext::NotEquals() {
  return getToken(FabParser::NotEquals, 0);
}


size_t FabParser::CompareOpContext::getRuleIndex() const {
  return FabParser::RuleCompareOp;
}

antlrcpp::Any FabParser::CompareOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FabParserVisitor*>(visitor))
    return parserVisitor->visitCompareOp(this);
  else
    return visitor->visitChildren(this);
}

FabParser::CompareOpContext* FabParser::compareOp() {
  CompareOpContext *_localctx = _tracker.createInstance<CompareOpContext>(_ctx, getState());
  enterRule(_localctx, 8, FabParser::RuleCompareOp);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    _la = _input->LA(1);
    if (!(_la == FabParser::Equals

    || _la == FabParser::NotEquals)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicOpContext ------------------------------------------------------------------

FabParser::LogicOpContext::LogicOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FabParser::LogicOpContext::And() {
  return getToken(FabParser::And, 0);
}

tree::TerminalNode* FabParser::LogicOpContext::Or() {
  return getToken(FabParser::Or, 0);
}

tree::TerminalNode* FabParser::LogicOpContext::Xor() {
  return getToken(FabParser::Xor, 0);
}


size_t FabParser::LogicOpContext::getRuleIndex() const {
  return FabParser::RuleLogicOp;
}

antlrcpp::Any FabParser::LogicOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FabParserVisitor*>(visitor))
    return parserVisitor->visitLogicOp(this);
  else
    return visitor->visitChildren(this);
}

FabParser::LogicOpContext* FabParser::logicOp() {
  LogicOpContext *_localctx = _tracker.createInstance<LogicOpContext>(_ctx, getState());
  enterRule(_localctx, 10, FabParser::RuleLogicOp);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << FabParser::And)
      | (1ULL << FabParser::Or)
      | (1ULL << FabParser::Xor))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MultOpContext ------------------------------------------------------------------

FabParser::MultOpContext::MultOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FabParser::MultOpContext::Multiply() {
  return getToken(FabParser::Multiply, 0);
}

tree::TerminalNode* FabParser::MultOpContext::Divide() {
  return getToken(FabParser::Divide, 0);
}


size_t FabParser::MultOpContext::getRuleIndex() const {
  return FabParser::RuleMultOp;
}

antlrcpp::Any FabParser::MultOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FabParserVisitor*>(visitor))
    return parserVisitor->visitMultOp(this);
  else
    return visitor->visitChildren(this);
}

FabParser::MultOpContext* FabParser::multOp() {
  MultOpContext *_localctx = _tracker.createInstance<MultOpContext>(_ctx, getState());
  enterRule(_localctx, 12, FabParser::RuleMultOp);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(136);
    _la = _input->LA(1);
    if (!(_la == FabParser::Divide

    || _la == FabParser::Multiply)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CallContext ------------------------------------------------------------------

FabParser::CallContext::CallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FabParser::CallContext::ParenOpen() {
  return getToken(FabParser::ParenOpen, 0);
}

FabParser::ArgumentsContext* FabParser::CallContext::arguments() {
  return getRuleContext<FabParser::ArgumentsContext>(0);
}

tree::TerminalNode* FabParser::CallContext::ParenClose() {
  return getToken(FabParser::ParenClose, 0);
}

FabParser::TermContext* FabParser::CallContext::term() {
  return getRuleContext<FabParser::TermContext>(0);
}


size_t FabParser::CallContext::getRuleIndex() const {
  return FabParser::RuleCall;
}

antlrcpp::Any FabParser::CallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FabParserVisitor*>(visitor))
    return parserVisitor->visitCall(this);
  else
    return visitor->visitChildren(this);
}

FabParser::CallContext* FabParser::call() {
  CallContext *_localctx = _tracker.createInstance<CallContext>(_ctx, getState());
  enterRule(_localctx, 14, FabParser::RuleCall);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(138);
    dynamic_cast<CallContext *>(_localctx)->target = term();
    setState(139);
    match(FabParser::ParenOpen);
    setState(140);
    arguments();
    setState(141);
    match(FabParser::ParenClose);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionalContext ------------------------------------------------------------------

FabParser::ConditionalContext::ConditionalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FabParser::ConditionalContext::If() {
  return getToken(FabParser::If, 0);
}

tree::TerminalNode* FabParser::ConditionalContext::Else() {
  return getToken(FabParser::Else, 0);
}

std::vector<FabParser::ExpressionContext *> FabParser::ConditionalContext::expression() {
  return getRuleContexts<FabParser::ExpressionContext>();
}

FabParser::ExpressionContext* FabParser::ConditionalContext::expression(size_t i) {
  return getRuleContext<FabParser::ExpressionContext>(i);
}


size_t FabParser::ConditionalContext::getRuleIndex() const {
  return FabParser::RuleConditional;
}

antlrcpp::Any FabParser::ConditionalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FabParserVisitor*>(visitor))
    return parserVisitor->visitConditional(this);
  else
    return visitor->visitChildren(this);
}

FabParser::ConditionalContext* FabParser::conditional() {
  ConditionalContext *_localctx = _tracker.createInstance<ConditionalContext>(_ctx, getState());
  enterRule(_localctx, 16, FabParser::RuleConditional);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    match(FabParser::If);
    setState(144);
    dynamic_cast<ConditionalContext *>(_localctx)->condition = expression(0);
    setState(145);
    dynamic_cast<ConditionalContext *>(_localctx)->thenClause = expression(0);
    setState(146);
    match(FabParser::Else);
    setState(147);
    dynamic_cast<ConditionalContext *>(_localctx)->elseClause = expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FieldQueryContext ------------------------------------------------------------------

FabParser::FieldQueryContext::FieldQueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FabParser::FieldQueryContext::FieldSep() {
  return getToken(FabParser::FieldSep, 0);
}

tree::TerminalNode* FabParser::FieldQueryContext::Query() {
  return getToken(FabParser::Query, 0);
}

FabParser::TermContext* FabParser::FieldQueryContext::term() {
  return getRuleContext<FabParser::TermContext>(0);
}

tree::TerminalNode* FabParser::FieldQueryContext::Identifier() {
  return getToken(FabParser::Identifier, 0);
}

FabParser::ExpressionContext* FabParser::FieldQueryContext::expression() {
  return getRuleContext<FabParser::ExpressionContext>(0);
}


size_t FabParser::FieldQueryContext::getRuleIndex() const {
  return FabParser::RuleFieldQuery;
}

antlrcpp::Any FabParser::FieldQueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FabParserVisitor*>(visitor))
    return parserVisitor->visitFieldQuery(this);
  else
    return visitor->visitChildren(this);
}

FabParser::FieldQueryContext* FabParser::fieldQuery() {
  FieldQueryContext *_localctx = _tracker.createInstance<FieldQueryContext>(_ctx, getState());
  enterRule(_localctx, 18, FabParser::RuleFieldQuery);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(149);
    dynamic_cast<FieldQueryContext *>(_localctx)->base = term();
    setState(150);
    match(FabParser::FieldSep);
    setState(151);
    dynamic_cast<FieldQueryContext *>(_localctx)->field = match(FabParser::Identifier);
    setState(152);
    match(FabParser::Query);
    setState(153);
    dynamic_cast<FieldQueryContext *>(_localctx)->defaultValue = expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FieldReferenceContext ------------------------------------------------------------------

FabParser::FieldReferenceContext::FieldReferenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FabParser::TermContext* FabParser::FieldReferenceContext::term() {
  return getRuleContext<FabParser::TermContext>(0);
}

tree::TerminalNode* FabParser::FieldReferenceContext::FieldSep() {
  return getToken(FabParser::FieldSep, 0);
}

tree::TerminalNode* FabParser::FieldReferenceContext::Identifier() {
  return getToken(FabParser::Identifier, 0);
}

FabParser::FieldReferenceContext* FabParser::FieldReferenceContext::fieldReference() {
  return getRuleContext<FabParser::FieldReferenceContext>(0);
}


size_t FabParser::FieldReferenceContext::getRuleIndex() const {
  return FabParser::RuleFieldReference;
}

antlrcpp::Any FabParser::FieldReferenceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FabParserVisitor*>(visitor))
    return parserVisitor->visitFieldReference(this);
  else
    return visitor->visitChildren(this);
}


FabParser::FieldReferenceContext* FabParser::fieldReference() {
   return fieldReference(0);
}

FabParser::FieldReferenceContext* FabParser::fieldReference(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  FabParser::FieldReferenceContext *_localctx = _tracker.createInstance<FieldReferenceContext>(_ctx, parentState);
  FabParser::FieldReferenceContext *previousContext = _localctx;
  size_t startState = 20;
  enterRecursionRule(_localctx, 20, FabParser::RuleFieldReference, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(156);
    term();
    setState(157);
    match(FabParser::FieldSep);
    setState(158);
    match(FabParser::Identifier);
    _ctx->stop = _input->LT(-1);
    setState(165);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<FieldReferenceContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleFieldReference);
        setState(160);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(161);
        match(FabParser::FieldSep);
        setState(162);
        match(FabParser::Identifier); 
      }
      setState(167);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ForeachContext ------------------------------------------------------------------
